# hauppauge_hdpvr2

./: 99-Hauppauge-PVR2.rules  CMakeLists.txt  Makefile  README.md  hauppauge.desc  readme
Common/: AVOutput.h  HDMI_consts.h  common.h  device.h  device_EDID.h  reg2cfg.pl  settings.cfg  settings.cfg.pre  siena.reg
Common/EncoderDev/: encoderDev.h  encoderDev_DXT.cpp  encoderDev_DXT.h
Common/EncoderDev/HAPIHost/: CHapi.cpp  CHapi.h  Hapi.cpp  Hapi.h  HapiBaseType.h  HapiCommon.h  HapiMsg.h  Hapi_extra.h  Hapi_priv.h  Hwapi.h  HwapiUsb.cpp  HwapiUsb.h  Queue.cpp  Queue.h  SwapEndian.cpp  SwapEndian.h  bkv_init.cpp  mchip_defines_public.h  mchip_utils.cpp  mchip_utils.h
Common/EncoderDev/HAPIHost/MChip/: mchip.cpp  mchip.h  mchip_base.cpp  mchip_binary.cpp  mchip_defines.h  mchip_dram_bkv.cpp  mchip_gpio.cpp  mchip_host_rw.cpp  mchip_led.cpp  mchip_memtomem.cpp  mchip_port_a.cpp  mchip_registers.h  mchip_sbp_rw.cpp  mchip_test_gpio.cpp  mchip_test_host.cpp  mchip_test_led.cpp
Common/FX2API/: FX2Device.cpp  FX2Device.h  rules.mk
Common/Rx/: audio_CS8416.cpp  audio_CS8416.h  audio_CX2081x.cpp  audio_CX2081x.h  receiver.h  receiver_ADV7842.cpp  receiver_ADV7842.h  receiver_ADV7842_consts.h
Common/Rx/ADV7842/: Wrapper.cpp  Wrapper.orig.c  wrapper.h  wrapper.orig.h
Common/Rx/ADV7842/RX/: rx_lib.h
Common/Rx/ADV7842/RX/HAL/: rx_afe_hal.c  rx_cfg.h  rx_cp_hal.c  rx_default_config.h  rx_defs.h  rx_hal.c  rx_hal.h  rx_hdmi_hal.c  rx_sdp_hal.c  rx_sdp_vdp_hal.c  rx_vdp_hal.c
Common/Rx/ADV7842/RX/HAL/4G/: rx_4g_hal.c  rx_4g_hal.h  rx_4g_hdmi_hal.c
Common/Rx/ADV7842/RX/HAL/4G/ADV7842/HAL/: 7842_def.h  7842_hal.c  7842_hal.h  7844_hal.c  7844_ini_hal.c
Common/Rx/ADV7842/RX/HAL/4G/ADV7842/MACROS/: ADV7842_afe_dpll_map_adr.h  ADV7842_afe_dpll_map_def.h  ADV7842_afe_dpll_map_fct.h  ADV7842_avlink_map_adr.h  ADV7842_avlink_map_def.h  ADV7842_avlink_map_fct.h  ADV7842_cec_map_adr.h  ADV7842_cec_map_def.h  ADV7842_cec_map_fct.h  ADV7842_cfg.h  ADV7842_cp_map_adr.h  ADV7842_cp_map_def.h  ADV7842_cp_map_fct.h  ADV7842_hdmi_map_adr.h  ADV7842_hdmi_map_def.h  ADV7842_hdmi_map_fct.h  ADV7842_infoframe_map_adr.h  ADV7842_infoframe_map_def.h  ADV7842_infoframe_map_fct.h  ADV7842_io_map_adr.h  ADV7842_io_map_def.h  ADV7842_io_map_fct.h  ADV7842_lib.h  ADV7842_repeater_map_adr.h  ADV7842_repeater_map_def.h  ADV7842_repeater_map_fct.h  ADV7842_sdp_io_map_adr.h  ADV7842_sdp_io_map_def.h  ADV7842_sdp_io_map_fct.h  ADV7842_sdp_map_adr.h  ADV7842_sdp_map_def.h  ADV7842_sdp_map_fct.h  ADV7842_vdp_map_adr.h  ADV7842_vdp_map_def.h  ADV7842_vdp_map_fct.h
Common/Rx/ADV7842/RX/LIB/: rx_afe.c  rx_cdec.c  rx_cec.c  rx_cp.c  rx_dpp_csc.c  rx_gen.c  rx_hdmi.c  rx_isr.c  rx_isr.h  rx_multi.c  rx_multi.h  rx_sdp.c  rx_vdp.c
Common/Wrappers/darwin/: USBif.cpp  USBif.h  USBif_el.cpp  baseif.cpp  baseif.h  files.mk  log.cpp  registryif.cpp  winwrap.h
Common/Wrappers/linux/: I2Cif.h  USBif.cpp  USBif.h  baseif.h  log.h
Common/colossus/: EncoderIF.h  Exeapi.h
TestApp/: Makefile  install.sh  main.cpp  pack.sh  readme  rebuild.sh
TestApp/build-ADV7842/: Makefile
